Change build script from ANT to PHING with parity
Note there is preliminary support for phpdocumentor2 but has been omitted due to some directory bugs.  The intention of this commit is to achieve ANT parity of the final archives in PHING, exclusing YUICompressor.

The build script is being redesigned to be more modular so specific compoents can be built, although not recommeneded at this time.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 .buildpath
 .project
 .settings
-.externalToolBuilders/build.kunena.2.0.launch
 .idea/
-build/tmp
+build/phing/cache
+build/ant/packages
+build/ant/tmp
+build/phing/composer.lock
+build/phing/cache
+build/phing/vendor
+build/phing/package
+build/phing/tmp
 components/com_kunena/site/template/**/params.ini
 components/com_kunena/site/template/crypsis/css/kunena.css
