Add codestyle checker

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ before_script:
 
 script:
 - php .travis/phppec.php components/ libraries/ plugins/
+- php .travis/phpcs.php
 - mv tests/acceptance.suite.dist.yml tests/acceptance.suite.yml
 - mv tests/api.suite.dist.yml tests/api.suite.yml
 
