--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_script:
 - fluxbox &
 - sleep 3 # give fluxbox some time to start
 - composer install --prefer-dist
+- composer update
 
 script:
 - php .travis/phppec.php components/ libraries/ plugins/
