--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "joomla-projects/robo": "dev-master",
         "joomla-projects/selenium-server-standalone": "v2.49.1",
         "fzaninotto/faker": "^1.5",
-        "joomla-projects/jorobo": "dev-master"
+        "joomla-projects/jorobo": "dev-master",
+        "phing/phing": "2.*"
     }
 }
