--- a/.travis.yml
+++ b/.travis.yml
@@ -40,4 +40,4 @@ before_script:
 script:
 # Build
 - mv tests/acceptance.suite.dist.yml tests/acceptance.suite.yml
-
+- vendor/bin/robo run:tests --use-htaccess
