--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ php:
 - 5.5
 - 5.6
 - 7.0
+addons:
+   firefox: "44.0"
 matrix:
   allow_failures:
-    - php: 5.6
     - php: 7.0
 before_script:
 - sudo apt-get update -qq
@@ -36,11 +37,10 @@ before_script:
 - sleep 3 # give fluxbox some time to start
 # Composer
 - composer install
+- composer update
 
 script:
 # Build
-- mv jbuild.dist.ini jbuild.ini
-- vendor/bin/robo build
 - mv tests/acceptance.suite.dist.yml tests/acceptance.suite.yml
-- vendor/bin/robo run:tests --use-htaccess
-
+- vendor/bin/phing -f build/phing/build.xml
+- vendor/bin/robo run:tests
