--- a/.travis.yml
+++ b/.travis.yml
@@ -37,10 +37,9 @@ before_script:
 - sleep 3 # give fluxbox some time to start
 # Composer
 - composer install
-- composer update
+- vendor/bin/phing -f build/phing/build.xml
 
 script:
 # Build
 - mv tests/acceptance.suite.dist.yml tests/acceptance.suite.yml
-- vendor/bin/phing -f build/phing/build.xml
-- vendor/bin/robo run:tests
+- vendor/bin/robo run:tests --use-htaccess
