--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_script:
 - sleep 3 # give fluxbox some time to start
 # Composer
 - composer install
-- vendor/bin/phing -f /home/travis/Kunena/Kunena-Forum/build/phing/build.xml
+- ./vendor/bin/phing -f ./build/phing/build.xml
 
 script:
 # Build
