--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,6 @@ before_script:
 
 script:
 # Build
-- php vendor/phing/phing/bin/phing -f build/phing/build.xml
+- vendor/bin/phing -f build/phing/build.xml
 - mv tests/acceptance.suite.dist.yml tests/acceptance.suite.yml
 - vendor/bin/robo run:tests --use-htaccess
