Add codestyle check

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ before_script:
 - sleep 3 # give fluxbox some time to start
 # Composer
 - composer install
+- git clone -b master https://github.com/joomla/coding-standards.git Joomla
+- vendor/bin/robo run:checker phpcs
 
 script:
 # Build
