--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ php:
 - 5.5
 - 5.6
 - 7.0
-allow_failures:
-- php: 7.1
+matrix:
+   allow_failures:
+  - php: 7.1
 addons:
    firefox: "47.0.1"
 before_script:
