--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ php:
 - 5.6
 - 7.0
 addons:
-   firefox: "47.0.1"
+  firefox: "47.0.1"
+matrix:
+  allow_failures:
+    - php: 7.1
 before_script:
 - sudo apt-get update -qq
 - sudo apt-get install -y --force-yes apache2 libapache2-mod-fastcgi php5-curl php5-mysql php5-intl php5-gd > /dev/null
