--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "joomla-projects/joomla-browser": "v3.6.0.1",
         "codegyre/robo": "~0.5",
         "joomla-projects/robo": "dev-master",
-        "joomla-projects/selenium-server-standalone": "dev-master",
+        "joomla-projects/selenium-server-standalone": "v2.53.1",
         "fzaninotto/faker": "^1.5",
         "joomla-projects/jorobo": "0.4",
         "phing/phing": "2.*"
