--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ php:
 - 5.5
 - 5.6
 - 7.0
+- 7.1
 addons:
-  firefox: "47.0.1"
+  firefox: "48.0.1"
 matrix:
   allow_failures:
     - php: 7.1
@@ -13,21 +14,21 @@ before_script:
 - sudo apt-get update -qq
 - sudo apt-get install -y --force-yes apache2 libapache2-mod-fastcgi php5-curl php5-mysql php5-intl php5-gd > /dev/null
 - sudo mkdir $(pwd)/.run
-- if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.0" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.0" ]]; then sudo sed -e "s,listen = 127.0.0.1:9000,listen = /tmp/php5-fpm.sock,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.0" ]]; then sudo sed -e "s,;listen.owner = nobody,listen.owner = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.0" ]]; then sudo sed -e "s,;listen.group = nobody,listen.group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.0" ]]; then sudo sed -e "s,;listen.mode = 0660,listen.mode = 0666,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.0" ]]; then sudo sed -e "s,user = nobody,;user = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.0" ]]; then sudo sed -e "s,group = nobody,;group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,listen = 127.0.0.1:9000,listen = /tmp/php5-fpm.sock,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,;listen.owner = nobody,listen.owner = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,;listen.group = nobody,listen.group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,;listen.mode = 0660,listen.mode = 0666,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,user = nobody,;user = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,group = nobody,;group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} <= "7.0" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} <= "7.0" ]]; then sudo sed -e "s,listen = 127.0.0.1:9000,listen = /tmp/php5-fpm.sock,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} <= "7.0" ]]; then sudo sed -e "s,;listen.owner = nobody,listen.owner = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} <= "7.0" ]]; then sudo sed -e "s,;listen.group = nobody,listen.group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} <= "7.0" ]]; then sudo sed -e "s,;listen.mode = 0660,listen.mode = 0666,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} <= "7.0" ]]; then sudo sed -e "s,user = nobody,;user = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} <= "7.0" ]]; then sudo sed -e "s,group = nobody,;group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} >= "7.0" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} >= "7.0" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} >= "7.0" ]]; then sudo sed -e "s,listen = 127.0.0.1:9000,listen = /tmp/php5-fpm.sock,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} >= "7.0" ]]; then sudo sed -e "s,;listen.owner = nobody,listen.owner = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} >= "7.0" ]]; then sudo sed -e "s,;listen.group = nobody,listen.group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} >= "7.0" ]]; then sudo sed -e "s,;listen.mode = 0660,listen.mode = 0666,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} >= "7.0" ]]; then sudo sed -e "s,user = nobody,;user = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} >= "7.0" ]]; then sudo sed -e "s,group = nobody,;group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
 - cat ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
 - sudo a2enmod rewrite actions fastcgi alias
 - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
@@ -39,11 +40,11 @@ before_script:
 # Xvfb
 - "export DISPLAY=:99.0"
 - "sh -e /etc/init.d/xvfb start"
-- sleep 3 # give xvfb some time to start
+- sleep 1 # give xvfb some time to start
 # Fluxbox
 - sudo apt-get install fluxbox -y --force-yes
 - fluxbox &
-- sleep 3 # give fluxbox some time to start
+- sleep 1 # give fluxbox some time to start
 # Composer
 - composer install
 - git clone -b master https://github.com/joomla/coding-standards.git Joomla
