--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,22 @@ before_script:
 - if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.*" ]]; then sudo sed -e "s,;listen.mode = 0660,listen.mode = 0666,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
 - if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.*" ]]; then sudo sed -e "s,user = nobody,;user = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
 - if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.*" ]]; then sudo sed -e "s,group = nobody,;group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.*" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.*" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.*" ]]; then sudo sed -e "s,listen = 127.0.0.1:9000,listen = /tmp/php5-fpm.sock,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.*" ]]; then sudo sed -e "s,;listen.owner = nobody,listen.owner = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.*" ]]; then sudo sed -e "s,;listen.group = nobody,listen.group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.*" ]]; then sudo sed -e "s,;listen.mode = 0660,listen.mode = 0666,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.*" ]]; then sudo sed -e "s,user = nobody,;user = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
-- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.*" ]]; then sudo sed -e "s,group = nobody,;group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,listen = 127.0.0.1:9000,listen = /tmp/php5-fpm.sock,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,;listen.owner = nobody,listen.owner = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,;listen.group = nobody,listen.group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,;listen.mode = 0660,listen.mode = 0666,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,user = nobody,;user = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo sed -e "s,group = nobody,;group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then sudo sed -e "s,listen = 127.0.0.1:9000,listen = /tmp/php5-fpm.sock,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then sudo sed -e "s,;listen.owner = nobody,listen.owner = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then sudo sed -e "s,;listen.group = nobody,listen.group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then sudo sed -e "s,;listen.mode = 0660,listen.mode = 0666,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then sudo sed -e "s,user = nobody,;user = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
+- if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then sudo sed -e "s,group = nobody,;group = $USER,g" --in-place ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf; fi
 - cat ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
 - sudo a2enmod rewrite actions fastcgi alias
 - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
